# blog-platform

./: .dockerignore  .env.example  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  build_prod.sh  bunfig.toml  cypress.config.ts  database.db  drizzle.config.ts  eslint.config.js  package.json  run_server_prod.sh
.github/workflows/: ci-pipeline.yml  main.yml  test-coverage.yml  test-e2e.yml
coverage/: .lcov.info.be868721668b9e9c.tmp
coverage-ts/: index.html  typescript-coverage.json
coverage-ts/files/: cypress.config.ts.html  drizzle.config.ts.html  package.json.html  tsconfig.json.html
coverage-ts/files/cypress/e2e/: view.cy.ts.html
coverage-ts/files/cypress/fixtures/: example.json.html
coverage-ts/files/cypress/reports/: mochawesome.json.html
coverage-ts/files/cypress/support/: commands.ts.html  e2e.ts.html
coverage-ts/files/src/: index.ts.html
coverage-ts/files/src/db/: index.ts.html  schema.ts.html  (+1 more)
coverage-ts/files/test/: blog.test.ts.html  view.cy.ts.html
cypress/e2e/: view.cy.ts
cypress/reports/: mochawesome.html  mochawesome.json  mochawesome_001.html  mochawesome_001.json
public/: index.html
src/: index.ts  main.rs
src/controllers/: BlogController.ts
src/db/: index.ts  schema.ts  utils.ts
src/interfaces/: IRepository.ts  IService.ts
src/models/: Blog.ts  blog.rs
src/repositories/: BlogRepository.ts  base_repository.rs  blog_repository.rs  mod.rs
src/routes/: BlogRoutes.ts
src/services/: BlogService.ts  PrometheuService.ts  base_service.rs
src/test/: blog.test.ts
test/: blog.test.ts  view.cy.ts
(+6 files in other folders)
