[package]
name = "blog-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2"
r2d2 = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"